# OhTe

./: .gitignore  README.md  notes.txt  työaikakirjanpito.txt
laskarit/viikko2/poetry_practice/: pyproject.toml
projekti/: .coverage  .coveragerc  .pylintrc  määrittelydokumentti.md  ohte_gol.sqlite-journal  pyproject.toml  shortTermTodo.txt  tasks.py
projekti/Documentation/: arkkitehtuuri.md  changelog.md  käyttöohje.md  määrittelydokumentti.md  requirements.md  testaus.md  työaikakirjanpito.txt
projekti/src/: board.py  config.py  database_connection.py  dev_tool_txt_to_gol.py  engine.py  engine_test.py  index.py  initialize_database.py  main.py  plaintxt_to_board_obj.py  services.py
projekti/src/Documentation/: requirements.md
projekti/src/dev_tools/: dev_tool_engine.py
projekti/src/entities/: board.py  user.py
projekti/src/game_objects/: button.py  speed_slider.py
projekti/src/repositories/: grid_repository.py  user_repository.py
projekti/src/tests/: board_test.py  grid_repository_test.py  service_grid_stuff_test.py  service_test.py  service_user_stuff_test.py  user_repository_test.py  user_test.py
projekti/src/ui/: board_creator_view.py  load_view.py  login_view.py  main_menu.py  menu_view.py  register_view.py  ui.py
