[tool.poetry]
name = "projekti"
version = "0.1.0"
description = ""
authors = ["levitesuo <leevi.suotula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cowsay = "^6.1"
invoke = "^2.2.0"
pygame = "^2.5.2"
pygame-widgets = "^1.1.5"
customtkinter = "^5.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.3"
pylint = "^3.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
